--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
+    "heroku-postbuild": "gatsby build",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
