--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
     "gatsby": "^3.8.1",
+    "nodemon": "^2.0.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
