--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
     {
       "url": "https://github.com/heroku/heroku-buildpack-static"
     }
-  ]
+  ],
+  "build": "node --max_old_space_size=8192 <entry_file_path> --progress --env.<dev/prod>"
 }
