--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "0BSD",
   "scripts": {
     "heroku-postbuild": "gatsby build",
+    "start": "node index.js",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
