--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "yarn start",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
